--- a/powerhall.css
+++ b/powerhall.css
@@ -131,7 +131,7 @@
 
 
 /* Media query for mobile devices */
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .skill-row {
         justify-content: space-around;
     }
@@ -142,5 +142,8 @@
     }
     .skill-level-label {
         font-size: 14px; /* Smaller label font size */
+    }
+    h4 {
+        font-size: 0.7em; /* Smaller font size for mobile */
     }
 }
