--- a/styles.css
+++ b/styles.css
@@ -1241,3 +1241,15 @@ input:checked + .slider:before {
     transform-origin: center;  /* Ensure the heart scales from its center */
     transition: transform 3s ease-in-out;  /* Smooth transition for shrinking and expanding */
 }
+
+#numPurchasedGodModeUpgrades {
+    text-shadow: 0 0 20px #1e90ff, 0 0 20px #00bfff;
+}
+
+#numPurchasedPUGodModeUpgrades {
+    text-shadow: 0 0 20px #8e44ad, 0 0 20px #b565c8;
+}
+
+#numPurchasedDoubleGodModeUpgrades {
+    text-shadow: 0 0 20px #1e90ff, 0 0 20px #8e44ad, 0 0 30px #4b6cb7;
+}
