--- a/settings.css
+++ b/settings.css
@@ -427,8 +427,10 @@ input[type="radio"]#toggleBuyMarkersNeutral:checked ~ .slider {
 .automation-button {
     position: relative;
     display: inline-block;
-    padding: 15px 30px;
-    font-size: 18px;
+    padding: 10px 20px;
+    font-size: 16px;
+    white-space: nowrap;
+    width: 100%;
     font-weight: bold;
     color: #ffffff;
     background-color: #a09f9f;
