--- a/styles.css
+++ b/styles.css
@@ -382,7 +382,7 @@ button:disabled {
 }
 
 /* Styles for the collect buttons */
-.collect-button {
+button.collect-button {
     background-color: #28a745; /* Green background */
     color: white;
     border: none;
@@ -395,17 +395,18 @@ button:disabled {
     transition: background-color 0.3s ease, transform 0.3s ease;
     touch-action: manipulation;
 }
-.collect-button:not(.disabled):hover {
+
+button.collect-button:not(.disabled):hover {
     background-color: #218838; /* Darker green on hover */
     transform: scale(1.1); /* Slightly larger on hover */
 }
 
-.collect-button:active {
+button.collect-button:active {
     background-color: #1e7e34; /* Even darker green on click */
     transform: scale(1.05); /* Slightly smaller on click */
 }
 
-.game-button {
+button.game-button {
     background-color: #4caf50; /* Initial background */
     color: white;
     border: none;
@@ -420,7 +421,7 @@ button:disabled {
     transition: background-color 0.3s ease, transform 0.3s ease, opacity 0.3s ease;
 }
 
-.game-button .progress {
+button.game-button .progress {
     background-color: rgba(40, 167, 69, 0.7); /* Semi-transparent green */
     height: 100%; /* Make sure the progress bar fills the button height */
     position: absolute; /* Position it over the button */
@@ -429,17 +430,18 @@ button:disabled {
     z-index: 1; /* Ensure it's above the button content */
     transition: width 0.1s linear; /* Smooth progress bar increase */
 }
-.game-button .button-content {
+
+button.game-button .button-content {
     position: relative; /* Ensure the button content is above the progress bar */
     z-index: 2;
 }
 
-.game-button:not(.disabled):hover {
+button.game-button:not(.disabled):hover {
     background-color: #218838; /* Darker green on hover */
     transform: scale(1.1); /* Slightly larger on hover */
 }
 
-.game-button:active {
+button.game-button:active {
     background-color: #1e7e34; /* Even darker green on click */
     transform: scale(1.05); /* Slightly smaller on click */
 }
@@ -458,7 +460,7 @@ button:disabled {
     text-align: center;
 }
 
-.disabled {
+button.disabled {
     background-color: #333; /* Darker gray */
     color: #666; /* Darker text */
     cursor: not-allowed;
@@ -510,7 +512,6 @@ button:disabled {
     margin-top: 10px;
     flex-direction: column;
     text-align: left;
-    width: 100%;
 }
 
 .upgrade .upgrade-cost p {
