--- a/styles.css
+++ b/styles.css
@@ -217,11 +217,12 @@ h1, h2 {
 }
 
 #settingsButton {
-    background-color: #7f8c8d; /* Gray background */
+    background-color: #82afb3; /* Gray background */
     color: white;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    letter-spacing: 1px;
     cursor: pointer;
     border-radius: 5px;
     white-space: nowrap; /* Prevent text wrapping */
