--- a/fighting.css
+++ b/fighting.css
@@ -116,6 +116,13 @@
     flex: 1; /* Allow stats to grow and fill space */
 }
 
+.STAT {
+    display: grid;
+    grid-template-columns: 45% 55%;
+    font-size: 15px;
+    justify-content: space-between;
+}
+
 /* Stats styling */
 .stats p {
     margin: 2px 0; /* Reduce the top and bottom margin */
@@ -168,6 +175,13 @@
     .enemy-section img, .player-section img {
         width: 100%; /* Ensure the image takes up the full width of the section */
         height: auto; /* Maintain aspect ratio */
+    }
+
+    .STAT {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        font-size: 13px;
+        justify-content: space-between;
     }
 
     /* Ensure that the text does not wrap and uses the full width */
