--- a/styles.css
+++ b/styles.css
@@ -306,6 +306,7 @@ button:hover {
 }
 
 button.affordable {
+    width: 100%;
     background-color: #4caf50; /* Green */
     color: white;
     touch-action: manipulation;
@@ -313,6 +314,7 @@ button.affordable {
 
 /* God Mode Affordable Button */
 button.affordable-godmode {
+    width: 100%;
     background-color: #1e90ff; /* DodgerBlue */
     color: white;
     border: 2px solid #00bfff; /* DeepSkyBlue */
@@ -327,6 +329,7 @@ button.affordable-godmode:hover {
 
 /* Purple God Mode Affordable Button */
 button.affordable-pu-godmode {
+    width: 100%;
     background-color: #8e44ad; /* Purple */
     color: white;
     border: 2px solid #b565c8; /* Light Purple */
@@ -341,6 +344,7 @@ button.affordable-pu-godmode:hover {
 
 /* Blue and Purple God Mode Affordable Button with Animated Wave Glow */
 button.affordable-double-godmode {
+    width: 100%;
     background: linear-gradient(45deg, #1e90ff, #8e44ad); /* Gradient from Blue to Purple */
     color: white;
     border: 2px solid #4b6cb7; /* A mix between blue and purple for the border */
