--- a/styles.css
+++ b/styles.css
@@ -1357,15 +1357,13 @@ input:checked + .slider:before {
     width: 300px;
     padding: 20px;
     border: 1px solid #ccc;
-    border-radius: 8px;
-    font-family: Arial, sans-serif;
+    position: relative;
 }
   
 .countdown-progress-bar {
     width: 100%;
-    height: 40px;
+    height: 5px;
     background-color: #eee;
-    border-radius: 10px;
     overflow: hidden;
     position: relative;
 }
@@ -1379,13 +1377,14 @@ input:checked + .slider:before {
   
 .countdown-time-display {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 24px;
+    top: 1%;
+    left: 99%;
+    transform: translate(-100%, 0);
+    font-size: small;
     font-weight: bold;
-    color: black;
+    color: white; 
     z-index: 1;
+    margin-top: 5px;
 }
 
 .countdown-warning {
