--- a/styles.css
+++ b/styles.css
@@ -1397,3 +1397,47 @@ input:checked + .slider:before {
         0 0 12px #8e44ad, 0 0 24px #8e44ad, /* Repeat purple */
         0 0 15px #7745d4, 0 0 30px #7745d4; /* Repeat bluish purple */
 }
+
+/* countdown timer */
+
+.countdown-container {
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    position: relative;
+}
+
+.countdown-progress-bar {
+    width: 100%;
+    height: 5px;
+    background-color: #eee;
+    overflow: hidden;
+    position: relative;
+}
+
+.countdown-progress {
+    width: 100%;
+    height: 100%;
+    background-color: #4CAF50;
+    transition: width 0.1s linear, background-color 0.3s ease;
+}
+
+.countdown-time-display {
+    position: absolute;
+    top: 1%;
+    left: 99%;
+    transform: translate(-100%, 0);
+    font-size: small;
+    font-weight: bold;
+    color: white; 
+    z-index: 1;
+    margin-top: 5px;
+}
+
+.countdown-warning {
+    background-color: #FFA500;
+}
+
+.countdown-danger {
+    background-color: #FF0000;
+}
