--- a/meditation.css
+++ b/meditation.css
@@ -96,3 +96,13 @@
     height: 100%;
     position: relative;
 }
+
+.arena-message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    z-index: 1000; /* Make sure it appears on top */
+    text-align: center;
+}
